# slow-german-news

./: .gitignore  SPEC.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-deploy.yml
backend/: audio.py  build.py  levels.py  models.py  prompts.py  sources.py
docs/brainstorms/: 2026-02-23-langsame-nachrichten-brainstorm.md
docs/plans/: 2026-02-23-feat-langsame-nachrichten-mvp-plan.md
docs/solutions/integration-issues/: openai-tts-4096-char-limit.md
frontend/: app.js  index.html  input.css  manifest.json  sw.js
tests/: test_audio.py  test_build.py  test_levels.py  test_models.py  test_sources.py
